[package]
name = "perfin"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A tool to facilitate personal finances."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
rand = "0.8.5"
dotenv = "0.15.0"
